--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
@@ -4,7 +4,8 @@
             <ion-nav-buttons side="left">
                 <div class="button">
                     <img width="35" height="35" src="img/Icons/Trophy.png" />
-                    <div class="soccer-number">4
+                    <div class="soccer-number">
+                        {{ matchCtrl.RemainingGuessAmount }}
                     </div>
                 </div>       
             </ion-nav-buttons>
@@ -13,7 +14,7 @@
             </ion-nav-buttons>
         </ion-nav-bar>
         <ion-tabs class="tabs-dark tabs-top">
-            <ion-tab title="จ<br>1">
+            <ion-tab title="{{ matchCtrl.PastTwoDaysDate | date: 'EEE' }}<br>{{ matchCtrl.PastTwoDaysDate | date: 'd' }}">
                 <ion-view view-title="Welcome">
                     <ion-content>
                         <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
@@ -23,7 +24,7 @@
                     </ion-content>
                 </ion-view>
             </ion-tab>
-            <ion-tab title="อ<br>2">
+            <ion-tab title="{{ matchCtrl.PastOneDaysDate | date: 'EEE' }}<br>{{ matchCtrl.PastOneDaysDate | date: 'd' }}">
                 <!-- Tab 2 content -->
                 <ion-view view-title="Welcome">
                     <ion-content>
@@ -38,10 +39,10 @@
                 </ion-view>
 
             </ion-tab>
-            <ion-tab title="พ<br>3">
+            <ion-tab title="{{ matchCtrl.CurrentDate | date: 'EEE' }}<br>{{ matchCtrl.CurrentDate | date: 'd' }}">
                 <ion-nav-view name="MainContent"></ion-nav-view>
             </ion-tab>
-            <ion-tab title="พฤ<br>4">
+            <ion-tab title="{{ matchCtrl.FutureOneDaysDate | date: 'EEE' }}<br>{{ matchCtrl.FutureOneDaysDate | date: 'd' }}">
                 <ion-view view-title="Welcome">
                     <ion-content>
                         <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
@@ -51,7 +52,7 @@
                     </ion-content>
                 </ion-view>
             </ion-tab>
-            <ion-tab title="ศ<br>5">
+            <ion-tab title="{{ matchCtrl.FutureTwoDaysDate | date: 'EEE' }}<br>{{ matchCtrl.FutureTwoDaysDate | date: 'd' }}">
                 <ion-view view-title="Welcome">
                     <ion-content>
                         <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
