--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -1,4 +1,4 @@
-﻿<ion-view class="bg-main login">
+﻿<ion-view class="bg-main scroll-middle">
         <!--<div class="row row-center">
             <div class="col col-center">
                 <div class="space-top">
