--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketPopup.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketPopup.html
@@ -1,9 +1,14 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-    <div>Content goes here.</div>
-</body>
-</html>
+﻿<ion-modal-view class="scroll-middle">
+    <ion-content>
+        <div class="text-center padding">
+            <h4>แต้มไม่เพียงพอที่จะแลกซื้อคูปองได้ตามจำนวนที่ต้องการ</h4>
+        </div>
+        <div class="row row-center">
+            <div class="col col-center">
+                <div class="">
+                    <button class="button button-small block-center col col-50 button-royal" ng-click="MatchPopup.hide()">ระบุใหม่</button>
+                </div>
+            </div>
+        </div>
+    </ion-content>
+</ion-modal-view>
