--- a/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
+++ b/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
@@ -43,7 +43,7 @@ $modal-inset-mode-top:            40% !default;
 $modal-inset-mode-right:          10% !default;
 $modal-inset-mode-bottom:         35% !default;
 $modal-inset-mode-left:           10% !default;
-$modal-inset-mode-min-height:     100px !default;
+$modal-inset-mode-min-height:     150px !default;
 $modal-inset-mode-min-width:     80% !default;
 
 
@@ -268,6 +268,9 @@ i {
 .no-border{
     border:0px !important;
 }
+.no-radius{
+    border-radius:0px !important;
+}
 .tabs-top > .tabs, .tabs.tabs-top {
     border-bottom-width: 0px;
 }
@@ -302,19 +305,19 @@ i {
         font-size: 12px;
     }
 }
-.login .scroll-content {
+.scroll-middle .scroll-content {
   display: table !important;
   width: 100% !important;
   height: 100% !important;
 }
-.login .scroll {
+.scroll-middle .scroll {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
 }
 
 ion-modal-view{
-    border-radius:  20px;
+    border-radius:  10px;
 }
 .input-number{
         border: 1px solid !important;
@@ -336,4 +339,19 @@ ion-modal-view{
     line-height: 20px !important;
     display: block !important;
 }
-
+.advertisement.modal {
+    top: initial;
+    right: initial;
+    bottom: initial;
+    left: initial;
+    min-height: 150px;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+}
+.advertisement .scroll {
+    height:100%
+}
+.advertisement .button-royal {
+    background:#242F4B !important;
+}
