--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/MatchPopup.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/MatchPopup.html
@@ -1,13 +1,11 @@
-﻿
-<ion-modal-view class="login">
-    
+﻿<ion-modal-view class="scroll-middle">    
     <ion-content><div class="text-center padding">
-        <h4 class="padding-top">เลือกได้สูงสุดเพียง 5 คู่</h4>
+        <h4 >เลือกได้สูงสุดเพียง 5 คู่</h4>
         </div>
         <div class="row row-center">
             <div class="col col-center">
                 <div class="">
-                    <button class="button block-center col col-50 button-dark" ng-click="MatchPopup.hide()">ปิด</button>
+                    <button class="button button-small block-center col col-50 button-royal" ng-click="MatchPopup.hide()">ปิด</button>
                 </div>
             </div>
         </div>
