Change style Match Template

--- a/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
+++ b/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
@@ -45,7 +45,8 @@ $modal-inset-mode-bottom:         35% !default;
 $modal-inset-mode-left:           10% !default;
 $modal-inset-mode-min-height:     150px !default;
 $modal-inset-mode-min-width:     80% !default;
-
+$ads-top-adroid:   ($bar-height + $bar-subheader-height + $ios-statusbar-height)-31;
+$ads-top-ios :   ($bar-height + $bar-subheader-height + $ios-statusbar-height)-11;
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
@@ -56,6 +57,16 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 
 // --------------------------------------------- Background color
+
+
+.has-subheader{
+            top: $ads-top-adroid !important;
+        }
+.platform-ios.platform-cordova {
+            .has-subheader{
+            top: $ads-top-ios !important;
+        }
+}
 
 
 .bg-main {
