--- a/src/DailySoccerSolution/DailySoccerMobile/www/css/ionic.app.css
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/css/ionic.app.css
@@ -9089,6 +9089,12 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+.has-subheader {
+  top: 109px !important; }
+
+.platform-ios.platform-cordova .has-subheader {
+  top: 129px !important; }
+
 .bg-main {
   background: #233b83; }
 
