--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
@@ -1,6 +1,6 @@
 ﻿<ion-view view-title="DAILY SOCCER">
-    <ion-content>
-        <div ng-include src="'/templates/Matches/_matchHeader.html'"></div>
+    <ion-content class="has-subheader">
+        <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
         <ion-list>
             <div class="row padding-bottom" ng-repeat="match in matchCtrl.TodayMatches">
                 <div class="col col-40 item" 
