--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -18,7 +18,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <button ng-click="accountCtrl.LoginWithFacebook()" class="button button-large col col-75 block-center button-calm">เข้าใช้งานผ่าน Facebook</button>
+                    <button ng-click="accountCtrl.LoginWithFacebook()" class="button col col-75 block-center button-calm">เข้าใช้งานผ่าน Facebook</button>
                 </div>
             </div>
         </ion-content>
