--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByMonth.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByMonth.html
@@ -1,38 +1,53 @@
-﻿<ion-view view-title="History by month">
-    <ion-content>
-        
-        <button class="button button-block button-stable">
-            stable
-        </button>
+﻿<ion-view view-title="DAILY SOCCER">
+    <ion-content class="history">
+        <div ng-include src="'templates/Matches/_matchHeaderAds.html'"></div>
+        <div class="list">
+            <div class="row padding-bottom">
+                <a class="row item item-stable no-border no-padding" href="#">
+                    <div class=" item item-royal col col-20 col-center text-center">
+                        <b>+111</b>
+                    </div>
+                    <div class="col col-75 col-center text-center">
+                        พฤษจิกายน 2558
+                    </div>
+                    <div class=" col col- col-center text-right">
+                        <i menu-close="" href="#/rewards/rewards" class="icon ion-chevron-right icon-accessory ">
+                        
+                        </i>
+                    </div>
+                </a>
+            </div>
+            <div class="row padding-bottom">
+                <a class="row item item-stable no-border no-padding" href="#">
+                    <div class=" item item-royal col col-20 col-center text-center">
+                        <b>+300</b>
+                    </div>
+                    <div class="col col-75 col-center text-center">
+                        ตุลาคม 2558
+                    </div>
+                    <div class=" col col- col-center text-right">
+                        <i menu-close="" href="#/rewards/rewards" class="icon ion-chevron-right icon-accessory ">
 
-        <button class="button button-block button-positive">
-            positive
-        </button>
+                        </i>
+                    </div>
+                </a>
+            </div>
+            <div class="row padding-bottom">
+                <a class="row item item-stable no-border no-padding" href="#">
+                    <div class=" item item-royal col col-20 col-center text-center">
+                        <b>+250</b>
+                    </div>
+                    <div class="col col-75 col-center text-center">
+                        กันยายน 2558
+                    </div>
+                    <div class=" col col- col-center text-right">
+                        <i menu-close="" href="#/rewards/rewards" class="icon ion-chevron-right icon-accessory ">
 
-        <button class="button button-block button-calm">
-            calm
-        </button>
+                        </i>
+                    </div>
+                </a>
+            </div>
 
-        <button class="button button-block button-balanced">
-            balanced
-        </button>
-
-        <button class="button button-block button-energized">
-            energized
-        </button>
-
-        <button class="button button-block button-dark">
-            dark
-        </button>
-        <button class="button button-block button-royal">
-            royal
-        </button>
-        <button class="button button-block bg-yellow">
-            .bg-yellow
-        </button>
-
-        <button class="button button-block bg-gray">
-            .bg-gray
-        </button>
+        </div>
     </ion-content>
 </ion-view>
