--- a/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
+++ b/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
@@ -372,3 +372,15 @@ ion-modal-view{
 .advertisement .button-royal {
     background:#242F4B !important;
 }
+.history {
+    .item.item-stable{
+    line-height:40px;
+    }
+    .item.item-royal{
+        background:#D2D2D2 !important;
+        border:0px !important;
+        margin:0px !important;
+        color:#000000 !important;
+    }
+
+}
