--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/FavoritTeam.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/FavoritTeam.html
@@ -1,7 +1,72 @@
 ﻿<ion-view class="">
-        <ion-content has-header="true" padding="true">
-            favorit team
-        </ion-content>
+    <ion-header-bar align-title="left" class="bar-positive">
+        <div class="">
+            <h1 class="title row">
+                <span class="col-offset-10 col-10"><img class="" height="45" src="../../img/Logos/FcLogo.png" /></span><span class="title">เลือกทีมที่ชอบ</span>
+            </h1>
+        </div>
+
+    </ion-header-bar>
+    <ion-content has-header="true">
+        <div class="title padding row">
+            <label class="row item item-positive bar-balanced">
+                <div class="buttons buttons-icon">
+                <button class="button button-icon button-small icon-left ion-chevron-left button-clear button-white"></button>
+                </div>
+                <div class=" text-center col">
+                <span>อังกฤษ พรีเมียร์ลีก</span>
+                </div>
+                <div class="buttons buttons-icon bar-balanced">
+                    <button class="button button-icon button-small icon-left ion-chevron-right button-clear button-white"></button>
+                </div>
+            </label>
+        </div>
+        <div class="row">
+            <label class="col no-border item item-radio ng-valid" ng-model="choice" ng-value="'C'" value="C" style="">
+                <input type="radio" name="radio-group" ng-value="'A'" ng-model="choice" class="ng-valid ng-dirty ng-touched ng-valid-parse" value="A" style="">
+                <div class="radio-content">
+                    <div class="item-content item-royal disable-pointer-events" ng-transclude="">
+                        <span>Choose A</span>
+                    </div>
+                    <i class="radio-icon disable-pointer-events icon ion-ios-star"></i>
+                </div>
+            </label>
+        </div>
+        <div class="row">
+            <label class="col no-border item item-radio ng-valid" ng-model="choice" ng-value="'C'" value="C" style="">
+                <input type="radio" name="radio-group" ng-value="'B'" ng-model="choice" class="ng-valid ng-dirty ng-touched ng-valid-parse" value="B" style="">
+                <div class="radio-content">
+                    <div class="item-content item-royal disable-pointer-events" ng-transclude="">
+                        <span>Choose B</span>
+                    </div>
+                    <i class="radio-icon disable-pointer-events icon ion-ios-star"></i>
+                </div>
+            </label>
+        </div>
+        <div class="row">
+            <label class="col no-border item item-radio ng-valid" ng-model="choice" ng-value="'C'" value="C" style="">
+                <input type="radio" name="radio-group" ng-value="'C'" ng-model="choice" class="ng-valid ng-dirty ng-touched ng-valid-parse" value="C" style="">
+                <div class="radio-content">
+                    <div class="item-content item-royal disable-pointer-events" ng-transclude="">
+                        <span>Choose C</span>
+                    </div>
+                    <i class="radio-icon disable-pointer-events icon ion-ios-star"></i>
+                </div>
+            </label>
+        </div>
+        <div class="row">
+            <label class="col no-border item item-radio ng-valid" ng-model="choice" ng-value="'C'" value="C" style="">
+                <input type="radio" name="radio-group" ng-value="'D'" ng-model="choice" class="ng-valid ng-dirty ng-touched ng-valid-parse" value="D" style="">
+                <div class="radio-content">
+                    <div class="item-content item-royal disable-pointer-events" ng-transclude="">
+                        <span>Choose D</span>
+                    </div>
+                    <i class="radio-icon disable-pointer-events icon ion-ios-star"></i>
+                </div>
+            </label>
+        </div>
+
+    </ion-content>
     <ion-footer-bar align-title="left" class="bar-balanced" ng-class="{hide: accountCtrl.isHideSkipButton}">
         <h1 class="title text-right">
             <a menu-close ng-click="accountCtrl.SkipLogin()" href="#">
