Implement Accordion UI

--- a/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
+++ b/src/DailySoccerSolution/DailySoccerMobile/scss/ionic.app.scss
@@ -406,7 +406,7 @@ ion-modal-view{
 }
 .history {
     .item.item-stable{
-    line-height:40px;
+    line-height:28px;
     }
     .item.item-royal{
         background:#D2D2D2 !important;
@@ -414,5 +414,17 @@ ion-modal-view{
         margin:0px !important;
         color:#000000 !important;
     }
-
+}
+.list .item.item-accordion {
+  line-height: 30px;
+  padding-top: 0;
+  padding-bottom: 0;
+  transition: 0.09s all linear;
+}
+.list .item.item-accordion.ng-hide {
+  line-height: 0px;
+}
+.list .item.item-accordion.ng-hide-add,
+.list .item.item-accordion.ng-hide-remove {
+  display: block !important;
 }
