--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByMonth.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByMonth.html
@@ -1,16 +1,16 @@
 ﻿<ion-view view-title="DAILY SOCCER">
     <ion-content class="history">
-        <div ng-include src="'templates/Matches/_matchHeaderAds.html'"></div>
+        <div ng-include src="'templates/Matches/_matchHeaderAds.html'" ></div>
         <div class="list">
             <div class="row padding-bottom">
-                <a class="row item item-stable no-border no-padding" href="#">
+                <a class="row item item-stable no-border no-padding" href="#/history/historybyday">
                     <div class=" item item-royal col col-20 col-center text-center">
                         <b>+111</b>
                     </div>
-                    <div class="col col-75 col-center text-center">
+                    <div class="col  col-center text-center">
                         พฤษจิกายน 2558
                     </div>
-                    <div class=" col col- col-center text-right">
+                    <div class=" col col-20 col-center text-right">
                         <i menu-close="" href="#/rewards/rewards" class="icon ion-chevron-right icon-accessory ">
                         
                         </i>
@@ -22,10 +22,10 @@
                     <div class=" item item-royal col col-20 col-center text-center">
                         <b>+300</b>
                     </div>
-                    <div class="col col-75 col-center text-center">
+                    <div class="col col-center text-center">
                         ตุลาคม 2558
                     </div>
-                    <div class=" col col- col-center text-right">
+                    <div class=" col col-20 col-center text-right">
                         <i menu-close="" href="#/rewards/rewards" class="icon ion-chevron-right icon-accessory ">
 
                         </i>
@@ -37,10 +37,10 @@
                     <div class=" item item-royal col col-20 col-center text-center">
                         <b>+250</b>
                     </div>
-                    <div class="col col-75 col-center text-center">
+                    <div class="col col-center text-center">
                         กันยายน 2558
                     </div>
-                    <div class=" col col- col-center text-right">
+                    <div class=" col col-20 col-center text-right">
                         <i menu-close="" href="#/rewards/rewards" class="icon ion-chevron-right icon-accessory ">
 
                         </i>
