--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByMonth.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByMonth.html
@@ -2,7 +2,7 @@
     <ion-content class="history">
         <div ng-include src="'templates/Matches/_matchHeaderAds.html'" ></div>
         <div class="list">
-            <div class="row padding-bottom">
+            <div class="row padding-bottom line-height-small">
                 <a class="row item item-stable no-border no-padding" href="#/history/historybyday">
                     <div class=" item item-royal col col-20 col-center text-center">
                         <b>+111</b>
@@ -17,8 +17,8 @@
                     </div>
                 </a>
             </div>
-            <div class="row padding-bottom">
-                <a class="row item item-stable no-border no-padding" href="#">
+            <div class="row padding-bottom line-height-small">
+                <a class="row item item-stable no-border no-padding" href="#/history/historybyday">
                     <div class=" item item-royal col col-20 col-center text-center">
                         <b>+300</b>
                     </div>
@@ -32,8 +32,8 @@
                     </div>
                 </a>
             </div>
-            <div class="row padding-bottom">
-                <a class="row item item-stable no-border no-padding" href="#">
+            <div class="row padding-bottom line-height-small">
+                <a class="row item item-stable no-border no-padding" href="#/history/historybyday">
                     <div class=" item item-royal col col-20 col-center text-center">
                         <b>+250</b>
                     </div>
