--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
@@ -2,6 +2,10 @@
     <ion-content class="has-subheader">
         <div ng-include src="'templates/Matches/_matchHeaderAds.html'"></div>
         <div ng-include src="'templates/Matches/_matchHeaderScore.html'"></div>
+        <div class="item no-border">
+            <img class="col" src="../../img/Logos/NoCompetition.png" />
+        </div>
+        
         <ion-list>
             <ion-item class="item item-divider no-border bg-gray text-center">
             <div class="item-icon-left">
