--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketCompleted.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketCompleted.html
@@ -1,4 +1,4 @@
-﻿<ion-view class="bg-main login">
+﻿<ion-view class="bg-main scroll-middle">
     <ion-content class="text-white font-large">
         <p>
             คุณเหลือแต้มที่ใช้ได้
