--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
@@ -20,7 +20,7 @@
                 แลกซื้อคูปองไปแล้วทั้งหมด 5 ใบ
             </div>
         </div>
-        <div class="item no-border text-center">
+        <div class="item no-border text-center no-padding-bottom">
             <div class="">
                 รางวัลประจำสัปดาห์
             </div>
