--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -9,7 +9,7 @@
             แต้มสะสม 7500
         </div>
         <div class="col col-center">
-                <a menu-close href="#/rewards/rewards" class="button-small button bg-yellow">
+                <a menu-close href="#/rewards/rewards" class="button-small block button bg-yellow">
                     แลกของรางวัล
                 </a>
         </div>
