--- a/src/DailySoccerSolution/DailySoccerMobile/www/css/ionic.app.css
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/css/ionic.app.css
@@ -9278,6 +9278,12 @@ i {
 .no-padding {
   padding: 0px !important; }
 
+.no-padding-bottom {
+  padding-bottom: 0px !important; }
+
+.padding-small {
+  padding: 5px; }
+
 .no-border {
   border: 0px !important; }
 
@@ -9425,6 +9431,3 @@ ion-modal-view {
 
 .button .icon {
   vertical-align: middle; }
-
-.padding-small {
-  padding: 5px; }
