Implement DisplayMatch on TodayMatches
Signed-off-by: Earn <earndarkness@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
@@ -13,7 +13,7 @@
                 
             </div>
                  อังกฤษ พรีเมียร์ลีก</ion-item>
-            <div class="row padding-bottom" ng-repeat="match in matchCtrl.TodayMatches">
+            <div class="row padding-bottom" ng-repeat="match in matchCtrl.DisplayMatches">
                 <div class="col col-40 item" 
                      ng-class="{'item-stable': !match.TeamHome.IsSelected,
                      'item-calm': match.TeamHome.IsSelected && !match.CompletedDate,
