--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/FavoritTeam.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/FavoritTeam.html
@@ -9,7 +9,7 @@
     </ion-header-bar>
     <ion-content has-header="true">
         <div class="title padding row">
-            <label class="row item item-positive bar-balanced">
+            <label class="border-radius-large row item item-positive bar-balanced">
                 <div class="buttons buttons-icon">
                 <button class="button button-icon button-small icon-left ion-chevron-left button-clear button-white"></button>
                 </div>
