--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
@@ -2,11 +2,12 @@
     <ion-content class="has-subheader">
         <div ng-include src="'templates/Matches/_matchHeaderAds.html'"></div>
         <div ng-include src="'templates/Matches/_matchHeaderScore.html'"></div>
-        <div class="item no-border">
+
+        <div class="item no-border" ng-show="matchCtrl.DisplayMatches.length == 0">
             <img class="col" src="../../img/Logos/NoCompetition.png" />
         </div>
         
-        <ion-list>
+        <ion-list ng-show="matchCtrl.DisplayMatches.length != 0">
             <ion-item class="item item-divider no-border bg-gray text-center">
             <div class="item-icon-left">
                 <i class="icon"><img class="" src="../../img/Logos/Flag-ENGx1.png" /></i>
