--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/FavoritTeam.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/FavoritTeam.html
@@ -1,6 +1,6 @@
 ﻿<ion-view class="">
     <ion-header-bar align-title="left" class="bar-positive">
-        <div class="">
+        <div class="title">
             <h1 class="title row">
                 <span class="col-offset-10 col-10"><img class="" height="45" src="../../img/Logos/FcLogo.png" /></span><span class="title">เลือกทีมที่ชอบ</span>
             </h1>
